--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -138,8 +138,8 @@
                     <h5 class="card-title">Youtube Connection</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Connected: </h6>
                     <p class="card-text">If you are connected you can share data.</p>
-                    <a href="#" id="yt" class="card-link">Connect</a>
-                    <a href="#" id="yt" class="card-link">Disconnect</a>
+                    <a href="#" class="card-link">Connect</a>
+                    <a href="#" class="card-link">Disconnect</a>
                   </div>
                 </div>
               </div>
