--- a/src/app/non-secure/mydevices/mydevices.component.scss
+++ b/src/app/non-secure/mydevices/mydevices.component.scss
@@ -11,6 +11,9 @@
      margin: 10px;
  }
 
+div.view-btn {
+    float: right;
+}
 
  .center-cust{
     justify-content: center;
@@ -19,6 +22,7 @@
 
 .card{
     width: 33%;
+    margin: 1rem;
 }
 
     .view-account{
