--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -43,14 +43,14 @@
               [gradient]="gradient" (select)="onSelect($event)" (activate)="onActivate($event)"
               (deactivate)="onDeactivate($event)">
             </ngx-charts-advanced-pie-chart>
-
-            <h3> Total Points: {{ totalPoints }} </h3>
-            <br />
-            <h4> Total Captures: {{ totalCaptures }} </h4>
-            <h4> Total Assists: {{ totalAssists }} </h4>
-            <h4> Total Medics: {{ totalMedics }} </h4>
-            <h4> Total Bombs Armed: {{ totalBombArm }} </h4>
-            <h4> Total Bombs Disarmed: {{ totalBombDis }} </h4>
+ 
+          </div>
+          <div class="row" *ngIf="isField">
+            <ngx-charts-advanced-pie-chart [view]="view" [scheme]="colorScheme" [results]="fieldGameConfigStats"
+              [gradient]="gradient" (select)="onSelect($event)" (activate)="onActivate($event)"
+              (deactivate)="onDeactivate($event)">
+            </ngx-charts-advanced-pie-chart>
+ 
           </div>
         </div>
         <div class="card-footer text-right">
