--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -37,20 +37,38 @@
     <div class="col-lg-8">
       <form class="card">
         <div class="card-body">
-          <h2 class="card-title"> Stats Summary </h2>
+
           <div class="row" *ngIf="isPlayer">
             <ngx-charts-advanced-pie-chart [view]="view" [scheme]="colorScheme" [results]="pieData"
               [gradient]="gradient" (select)="onSelect($event)" (activate)="onActivate($event)"
               (deactivate)="onDeactivate($event)">
             </ngx-charts-advanced-pie-chart>
- 
+
           </div>
+
           <div class="row" *ngIf="isField">
-            <ngx-charts-advanced-pie-chart [view]="view" [scheme]="colorScheme" [results]="fieldGameConfigStats"
-              [gradient]="gradient" (select)="onSelect($event)" (activate)="onActivate($event)"
-              (deactivate)="onDeactivate($event)">
-            </ngx-charts-advanced-pie-chart>
- 
+
+              <h2>Combined Game Stats</h2>
+
+              <ngx-charts-advanced-pie-chart [view]="view" [scheme]="colorScheme" [results]="pieData"
+                [gradient]="gradient" (select)="onSelect($event)" (activate)="onActivate($event)"
+                (deactivate)="onDeactivate($event)">
+              </ngx-charts-advanced-pie-chart>
+
+              <h2>Individual Game Stats</h2>
+
+              <div *ngFor="let game of gameHistData; let i = index">
+
+                 <h3>Game #: {{game.id}}</h3>
+                 <h4>Start Time: {{ game.start}}</h4>
+                 <h4>End Time: {{ game.end }}</h4>
+                <ngx-charts-advanced-pie-chart [view]="view" [scheme]="colorScheme" [results]="game.pieData"
+                  [gradient]="gradient" (select)="onSelect($event)" (activate)="onActivate($event)"
+                  (deactivate)="onDeactivate($event)">
+                </ngx-charts-advanced-pie-chart>
+
+            </div>
+
           </div>
         </div>
         <div class="card-footer text-right">
