--- a/src/app/global/map/map.component.scss
+++ b/src/app/global/map/map.component.scss
@@ -6,7 +6,8 @@ path.location{
 
 path.location:hover {
     fill             : rgba(255,255,255,50);
-    stroke           : none;
+    stroke           : black;
+    stroke-width     : 0.5px;
     opacity          : 0.35;
     transform        : scale(1.1);
     transform-origin : center;
