--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -39,7 +39,7 @@
         <div class="card-body">
 
           <div class="row" *ngIf="isPlayer">
-            <ngx-charts-advanced-pie-chart [view]="view" [scheme]="colorScheme" [results]="pieData"
+            <ngx-charts-advanced-pie-chart  [scheme]="colorScheme" [results]="pieData"
               [gradient]="gradient" (select)="onSelect($event)" (activate)="onActivate($event)"
               (deactivate)="onDeactivate($event)">
             </ngx-charts-advanced-pie-chart>
@@ -50,7 +50,7 @@
 
             <h2>Combined Game Stats</h2>
 
-            <ngx-charts-advanced-pie-chart [view]="view" [scheme]="colorScheme" [results]="pieData"
+            <ngx-charts-advanced-pie-chart [scheme]="colorScheme" [results]="pieData"
               [gradient]="gradient" (select)="onSelect($event)" (activate)="onActivate($event)"
               (deactivate)="onDeactivate($event)">
             </ngx-charts-advanced-pie-chart>
@@ -75,7 +75,7 @@
           [isOpen]="isFirstOpen"> 
           <h4>Start Time: {{ game.start}}</h4>
           <h4>End Time: {{ game.end }}</h4>
-          <ngx-charts-advanced-pie-chart [view]="view" [scheme]="colorScheme" [results]="game.pieData"
+          <ngx-charts-advanced-pie-chart   [scheme]="colorScheme" [results]="game.pieData"
             [gradient]="gradient" (select)="onSelect($event)" (activate)="onActivate($event)"
             (deactivate)="onDeactivate($event)">
           </ngx-charts-advanced-pie-chart>
