it's device data - not map data

--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -31,7 +31,7 @@
                     </div>
 
                     <div>
-                        <app-map [mapID]="gameData.mapID" [mapData]="gameData.devices"></app-map>
+                        <app-map [mapID]="gameData.mapID" [deviceData]="gameData.devices"></app-map>
                     </div>
 
                 </div>
