--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -105,7 +105,7 @@
               Please try again or <a [routerLink]="['/non-secure/contact-us']">contact us.</a>
             </div>
           </div>
-          <div *ngIf="isPlayer" id="socalMedia">
+          <!-- <div *ngIf="isPlayer" id="socalMedia">
             <div class="row">
               <div class="col">
                 <div id="fb_card" class="card">
@@ -144,7 +144,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
         <div id="settings" class="content-panel">
           <h2 class="title center-cust">Pair RFID Band to a Registered Player</h2>
