--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -153,11 +153,11 @@
 									<i class="fa fa-google-plus"></i>
 								</a>
 							</div>
-							<div class="col-xs-4">
+							<!-- <div class="col-xs-4">
 								<a href="#" class="btn btn-lg btn-block social_icon">
 									<i class="fa fa-twitter"></i>
 								</a>
-							</div>
+							</div> -->
 						</div>
 						<a [routerLink]="['/auth/login']" class="additional-link">Have an Account?
 							<span>LOGIN</span></a>
