--- a/src/app/global/footer/footer.component.html
+++ b/src/app/global/footer/footer.component.html
@@ -13,7 +13,7 @@
               <ul class="list-unstyled">
                 <li><a  [routerLink]="['/non-secure/contact-us']">Contact Us</a></li>
                 <li><a  [routerLink]="['/non-secure/privacy-policy']">Privacy Policy</a></li>
-                <li><a  [routerLink]="['/non-secure/faq']">FAQs</a></li> 
+                <!-- <li><a  [routerLink]="['/non-secure/faq']">FAQs</a></li>  -->
               </ul>
             </div>
           </div>
@@ -49,7 +49,7 @@
               <h4>Follow Us</h4>
               <ul class="social-network social-circle">
                <li><a href="https://www.facebook.com/pages/category/Sports---Recreation/Skirmesh-108898537907505/" class="icofacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#" class="icotwitter" title="twitter"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="mailto:skirmesh.net@gmail.com" class="icotwitter" title="twitter"><i class="fa fa-google"></i></a></li>
               </ul>				
           </div>
       </div>
