--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -54,6 +54,13 @@
                 </div>
               </div>
               <div *ngIf="isPlayer" class="form-group">
+                <label class="col-md-2 col-sm-3 col-xs-12 control-label">Call Sign</label>
+                <div class="col-md-10 col-sm-9 col-xs-12">
+                  <input formControlName="callSign" type="text" class="form-control"
+                    placeholder="{{currentVals.callSign}}">
+                </div>
+              </div>
+              <div *ngIf="isPlayer" class="form-group">
                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Bio</label>
                 <div class="col-md-10 col-sm-9 col-xs-12">
                   <input formControlName="bio" type="text" class="form-control" placeholder="{{currentVals.bio}}">
