add methods to get UID info for pairing

--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -148,15 +148,31 @@
         </div>
         <div id="settings" class="content-panel">
           <h2 class="title center-cust">Pair RFID Band to a Registered Player</h2>
+
+          <button (click)="checkRfidToPair()" type="button" class="btn btn-sm btn-primary btn-default-alt">Check RFID</button>
+
           <div class='row'>
-            <pre
-              class="card card-block card-header mb-3">Please Scan RFID at Controller and wait for rfid to appear on screen.</pre>
-            <pre class="card card-block card-header mb-3">Scanned RFID: {{RFIDScanned | json}}</pre>
+
+
+            <p class="card card-block card-header mb-3">
+                Scan RFID at Controller and Check for the RFID.
+            </p>
             <br>
-            <a style="width:100%">Search for Player: </a><input [(ngModel)]="playerSelected" [typeahead]="players"
+            <p class="card card-block card-header mb-3">Scanned RFID: {{ rfidToPair }}</p>
+            <br>
+
+            <select class="form-control"
+                [(ngModel)]="playerSelected">
+                <option *ngFor="let player of playerList; let i = index"
+                    [ngValue]=player.id>
+                    {{player.callSign}}
+                </option>
+            </select>
+
+            <a style="width:100%">Search for Player: </a><input [(ngModel)]="playerSelected" [typeahead]="playerList"
               typeaheadOptionField="name" [adaptivePosition]="true" class="form-control">
 
-            <button (click)="connectRfidToPlayer()" type="button" class="btn btn-success">Connect</button>
+            <button (click)="pairRfidToPlayer()" type="button" class="btn btn-success">Connect</button>
             <!-- <pre class="card card-block card-header mb-3">Model: {{selected | json}}</pre>
             <input [(ngModel)]="selected" [typeahead]="states" [adaptivePosition]="true" class="form-control"> -->
           </div>
