add the delete RFID button

--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -156,7 +156,8 @@
         <div id="settings" class="content-panel">
           <h2 class="title center-cust">Pair RFID Band to a Registered Player</h2>
 
-          <button (click)="checkRfidToPair()" type="button" class="btn btn-sm btn-primary btn-default-alt">Check RFID</button>
+          <button  type="button" class="btn btn-sm btn-danger">Clear RFID</button>
+          <button (click)="checkRfidToPair()" type="button" class="btn btn-sm btn-primary">Check RFID</button>
 
           <div class='row'>
 
