--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -70,17 +70,22 @@
           <h2 class="center-cust">Individual Game Stats</h2>
         </div>
         <accordion>
-          <accordion-group *ngFor="let game of gameHistData; let i = index" heading="Game #: {{game.id}}"
+
+          <accordion-group *ngFor="let game of gameHistData; let i = index"
+          heading="Game #: {{game.id}}"
           [panelClass]="customClass"
-          [isOpen]="isFirstOpen"> 
-          <h4>Start Time: {{ game.start}}</h4>
-          <h4>End Time: {{ game.end }}</h4>
+          [isOpen]="isFirstOpen">
+
+          <h4 *ngIf="isField">Start Time: {{ game.start}}</h4>
+          <h4 *ngIF="isField">End Time: {{ game.end }}</h4>
+
           <ngx-charts-advanced-pie-chart   [scheme]="colorScheme" [results]="game.pieData"
             [gradient]="gradient" (select)="onSelect($event)" (activate)="onActivate($event)"
             (deactivate)="onDeactivate($event)">
           </ngx-charts-advanced-pie-chart>
-</accordion-group>
-        </accordion> 
+
+        </accordion-group>
+        </accordion>
       </div>
 
     </div>
